<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:textColor="@color/white"
    tools:context=".MainActivity">
    <RelativeLayout
        android:id="@+id/injectionloading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/black"
        android:textColor="@color/blue">
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>
        <TextView
            android:layout_below="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/injecting"/>
    </RelativeLayout>
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/navy">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/slidemenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_menu_white_24dp"/>
        <TextView
            android:id="@+id/bartitle"
            android:text="@string/app_name"
            android:layout_toRightOf="@+id/slidemenu"
            android:layout_marginLeft="20dp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/switchstatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/devicenotconnection"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@color/red"/>

<!--
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/payloadslist"
        android:layout_below="@+id/switchstatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:switchPadding="10dp"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:text=""/>
-->

        <!-- testing -->
        <LinearLayout
            android:id="@+id/llisting"
            android:layout_below="@+id/switchstatus"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
        </LinearLayout>


    <RelativeLayout
        android:id="@+id/fileselection"
        android:layout_below="@+id/llisting"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<TextView
    android:id="@+id/filepath"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_centerVertical="true"
    android:text="@string/filepathsrc"
    android:textColor="@color/silver"
    android:layout_toLeftOf="@+id/filebtn"/>

<Button
    android:id="@+id/filebtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/filebtn"
    android:textColor="@color/black"
    android:layout_marginRight="5dp"
    android:layout_alignParentRight="true"
    android:textAllCaps="false"

    />
    </RelativeLayout>

    <Button
        android:id="@+id/injection"
        android:layout_below="@+id/fileselection"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/injectiontxt"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        />
        <androidx.appcompat.widget.SwitchCompat
            android:layout_below="@id/injection"
            android:id="@+id/autoinjection"
            android:text="@string/autoinject"
            android:textColor="@color/lime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:switchPadding="20dp"
            android:layout_centerHorizontal="true"/>


        <TextView
            android:id="@+id/opengithub"
            android:layout_below="@+id/autoinjection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/mygithub"
            android:textColor="@color/blue" />
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>